Added select business logic, Moved content logic from popup to content, Renamed ai to select

--- a/popup.html
+++ b/popup.html
@@ -33,7 +33,7 @@
         <label for="page" class="checkbox-label">only on this page</label>
     </div>
     <div class="flex-center space-bottom-bigger">
-        <button id="ai" class="button space-right">ai</button>
+        <button id="select" class="button space-right">select</button>
         <button id="save" class="button">save</button>
     </div>
     <div class="flex-center">
