Fixed index not working, moved more down to background, renamed page to url where it is actually a url...

--- a/options.html
+++ b/options.html
@@ -22,7 +22,7 @@
                     <input id="addindex" class="input input--shorter" type="text" placeholder="Index e.g. 3">
                 </label>
                 <label class="space-right">
-                    <input id="addpage" class="input input--long" type="text" placeholder="Page URL (leave empty to apply everywhere)">
+                    <input id="addurl" class="input input--long" type="text" placeholder="Page URL (leave empty to apply everywhere)">
                 </label>
                 <button id="add" class="button space-right-button">add</button>
             </div>
