Added possibility to dispatch click event

--- a/options.html
+++ b/options.html
@@ -15,6 +15,8 @@
                     <input id="addproperty" class="input input--short" type="text" placeholder="Property e.g. value" autocomplete="property"
                            required>
                 </label>
+                <input id="addclick" class="checkbox" type="checkbox">
+                <label for="addclick" class="checkbox-label space-right">dispatch click event</label>
                 <label class="space-right">
                     <input id="addselector" class="input" type="text" placeholder="Selector e.g. input[type=text]" autocomplete="selector"
                            required>
