--- a/popup.html
+++ b/popup.html
@@ -13,10 +13,14 @@
             <input id="value" class="input" type="text" placeholder="Value e.g. Test" autocomplete="value">
         </label>
     </div>
-    <div class="space-bottom">
+    <div class="space-bottom-big">
         <label>
             <input id="property" class="input" type="text" placeholder="Property e.g. value" autocomplete="property" required>
         </label>
+    </div>
+    <div class="flex space-bottom-big">
+        <input id="click" class="checkbox" type="checkbox">
+        <label for="click" class="checkbox-label">dispatch click event</label>
     </div>
     <div class="space-bottom">
         <label>
