--- a/options.html
+++ b/options.html
@@ -35,10 +35,17 @@
         <div id="config" class="content-padding-lr"></div>
         <div class="content-padding-lr space-bottom-bigger">
             <div class="flex-center space-bottom-big">
-                <button id="save" type="submit" class="button">save</button>
+                <button id="save" type="submit" class="button space-right">save</button>
+                <button id="clear" type="reset" class="button">clear</button>
+            </div>
+            <div class="flex-center space-bottom-big">
+                <a id="export" type="submit" href="" download="waff-export.json" class="button">export</a>
             </div>
             <div class="flex-center">
-                <button id="clear" type="reset" class="button">clear</button>
+                <label>
+                    <input id="import" type="file">
+                    <span id="import-result"></span>
+                </label>
             </div>
         </div>
     </form>
