--- a/popup.html
+++ b/popup.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <form id="form" autocomplete="on" class="container content-padding">
-    <div class="flex-center space-bottom-bigger">
+    <div class="flex flex--center space-bottom-bigger">
         <button id="fill" type="button" class="button">f i l l</button>
     </div>
     <div class="space-bottom">
@@ -36,11 +36,11 @@
         <input id="page" class="checkbox" type="checkbox">
         <label for="page" class="checkbox-label">only on this page</label>
     </div>
-    <div class="flex-center space-bottom-bigger">
+    <div class="flex flex--center space-bottom-bigger">
         <button id="select" type="button" class="button space-right">select</button>
         <button id="save" type="submit" class="button">save</button>
     </div>
-    <div class="flex-center">
+    <div class="flex flex--center">
         <button id="options" type="button" class="button">options</button>
     </div>
 </form>
