--- a/options.html
+++ b/options.html
@@ -36,7 +36,8 @@
         <div class="content-padding-lr space-bottom-bigger">
             <div class="flex flex--center space-bottom-big">
                 <button id="save" type="submit" class="button space-right">save</button>
-                <button id="clear" type="reset" class="button">clear</button>
+                <button id="clear" type="reset" class="button space-right">clear</button>
+                <button id="reset" type="reset" class="button">reset</button>
             </div>
             <div class="flex flex--center space-bottom-big">
                 <a id="export" type="submit" href="" download="waff-export.json" class="button">export</a>
