Added preset possibility

--- a/options.html
+++ b/options.html
@@ -9,6 +9,9 @@
         <div class="flex flex--center">
             <div class="inline-flex flex--center flex--wrap">
                 <label class="space-right">
+                    <input id="addpreset" class="input" type="text" placeholder="Preset name (empty is default)" autocomplete="preset">
+                </label>
+                <label class="space-right">
                     <input id="addvalue" class="input" type="text" placeholder="Value e.g. Test" autocomplete="value">
                 </label>
                 <label class="space-right">
