--- a/popup.html
+++ b/popup.html
@@ -5,6 +5,11 @@
 </head>
 <body>
 <form id="form" autocomplete="on" class="container content-padding">
+    <div class="space-bottom-big">
+        <label>
+            <select id="preset" class="select" autocomplete="off"></select>
+        </label>
+    </div>
     <div class="flex flex--center space-bottom-bigger">
         <button id="fill" type="button" class="button">f i l l</button>
     </div>
