Added test button to test current selection, fixed fill elements filter

--- a/popup.html
+++ b/popup.html
@@ -43,6 +43,7 @@
     </div>
     <div class="flex flex--center space-bottom-bigger">
         <button id="select" type="button" class="button space-right">select</button>
+        <button id="test" type="button" class="button space-right">test</button>
         <button id="save" type="submit" class="button">save</button>
     </div>
     <div class="flex flex--center">
