Added xpath initial, fixed test button disabling fill button

--- a/options.html
+++ b/options.html
@@ -12,7 +12,7 @@
                     <input id="addpreset" class="input" type="text" placeholder="Preset name (empty is default)" autocomplete="preset">
                 </label>
                 <label class="space-right">
-                    <input id="addvalue" class="input" type="text" placeholder="Value e.g. Test" autocomplete="value">
+                    <input id="addvalue" class="input" type="text" placeholder="Value e.g. Hello" autocomplete="value">
                 </label>
                 <label class="space-right">
                     <input id="addproperty" class="input input--short" type="text" placeholder="Property e.g. value" autocomplete="property"
@@ -21,8 +21,10 @@
                 <input id="addclick" class="checkbox" type="checkbox">
                 <label for="addclick" class="checkbox-label space-right">dispatch click event</label>
                 <label class="space-right">
-                    <input id="addselector" class="input" type="text" placeholder="Selector e.g. input[type=text]" autocomplete="selector"
-                           required>
+                    <input id="addselector" class="input" type="text" placeholder="Selector e.g. input[type=text]" autocomplete="selector" required>
+                </label>
+                <label class="space-right">
+                    <input id="addxpath" class="input" type="text" placeholder="XPath e.g. //div[text()='Hello']" autocomplete="xpath" required>
                 </label>
                 <label class="space-right">
                     <input id="addindex" class="input input--shorter" type="text" placeholder="Index e.g. 3" autocomplete="index">
