--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
     </div>
     <div class="space-bottom">
         <label>
-            <input id="value" class="input" type="text" placeholder="Value e.g. Test" autocomplete="value">
+            <input id="value" class="input" type="text" placeholder="Value e.g. Hello" autocomplete="value">
         </label>
     </div>
     <div class="space-bottom-big">
@@ -30,6 +30,11 @@
     <div class="space-bottom">
         <label>
             <input id="selector" class="input" type="text" placeholder="Selector e.g. input[type=text]" autocomplete="selector" required>
+        </label>
+    </div>
+    <div class="space-bottom">
+        <label>
+            <input id="xpath" class="input" type="text" placeholder="XPath e.g. //div[text()='Hello']" autocomplete="xpath" required>
         </label>
     </div>
     <div class="space-bottom-big">
