Fixed xpath related issues

--- a/options.html
+++ b/options.html
@@ -24,7 +24,7 @@
                     <input id="addselector" class="input" type="text" placeholder="Selector e.g. input[type=text]" autocomplete="selector" required>
                 </label>
                 <label class="space-right">
-                    <input id="addxpath" class="input" type="text" placeholder="XPath e.g. //div[text()='Hello']" autocomplete="xpath" required>
+                    <input id="addxpath" class="input" type="text" placeholder="XPath e.g. //div[contains(.,'Hello')]" autocomplete="xpath" required>
                 </label>
                 <label class="space-right">
                     <input id="addindex" class="input input--shorter" type="text" placeholder="Index e.g. 3" autocomplete="index">
