--- a/popup.html
+++ b/popup.html
@@ -34,7 +34,7 @@
     </div>
     <div class="space-bottom">
         <label>
-            <input id="xpath" class="input" type="text" placeholder="XPath e.g. //div[text()='Hello']" autocomplete="xpath" required>
+            <input id="xpath" class="input" type="text" placeholder="XPath e.g. //div[contains(.,'Hello')]" autocomplete="xpath" required>
         </label>
     </div>
     <div class="space-bottom-big">
