Added auto fill for the current domain (user needs to open the extension popup for each domain for it to work on all pages of that domain)

--- a/popup.html
+++ b/popup.html
@@ -10,8 +10,10 @@
             <select id="preset" class="select" autocomplete="off"></select>
         </label>
     </div>
-    <div class="flex flex--center space-bottom-bigger">
-        <button id="fill" type="button" class="button">f i l l</button>
+    <div class="flex flex--left space-bottom-bigger">
+        <button id="fill" type="button" class="button space-right">fill</button>
+        <input id="auto" class="checkbox" type="checkbox">
+        <label for="auto" class="checkbox-label">auto fill domain</label>
     </div>
     <div class="space-bottom">
         <label>
