--- a/popup.html
+++ b/popup.html
@@ -10,10 +10,12 @@
             <select id="preset" class="select" autocomplete="off"></select>
         </label>
     </div>
-    <div class="flex flex--left space-bottom-bigger">
-        <button id="fill" type="button" class="button space-right">fill</button>
+    <div class="flex flex--center space-bottom-bigger">
+        <button id="fill" type="button" class="button space-right">f i l l</button>
         <input id="auto" class="checkbox" type="checkbox">
-        <label for="auto" class="checkbox-label">auto fill domain</label>
+        <label for="auto" class="checkbox-label">auto fill</label>
+        <span>&nbsp;</span>
+        <span id="auto-info" class="info">&#x1f6c8;</span>
     </div>
     <div class="space-bottom">
         <label>
@@ -57,6 +59,9 @@
         <button id="options" type="button" class="button">options</button>
     </div>
 </form>
+<div id="auto-info-popup" class="popup">
+    <p>The auto fill feature is only active for one domain at a time. If you navigate away from the domain, the extension icon <img src="images/icon16.png" alt="logo"> needs to be clicked (to open the extension popup) which also activates the feature for the current domain. The checkbox indicates if auto fill will be executed as soon as the domain is activated.</p>
+</div>
 <script src="popup.js"></script>
 </body>
 </html>
